--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <IMG SRC="https://i.giphy.com/j6XB56himh6lZ1E5vZ.webp">
     <h1>Test 2</h1>
     <p>Test2</p>
 </body>
