--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h3>Я любезно попросил чат GPT внести свою лепту и вот его слова:</h3>
     <h4>❝On this special day, I extend heartfelt birthday wishes to your amazing father. May the tapestry of his life be woven with threads of love, laughter, and countless beautiful memories. Here's to celebrating the remarkable person he is and the incredible journey that lies ahead. Happy Birthday! 🎉❞</h4>
     <h3>Дальше пришлось позвать GOOGLE:</h3>
+    <IMG SRC="blob:https://web.telegram.org/a031ca07-0ff5-4368-ac70-56a1df59be4d">
 </body>
 </html>
