--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h3>Дальше пришлось позвать GOOGLE:</h3>
     <h4>❝В этот особенный день я сердечно поздравляю твоего замечательного отца с днем рождения. Пусть полотно его жизни будет соткано из нитей любви, смеха и бесчисленных прекрасных воспоминаний. <br>
         Давайте отдадим дань уважения тому замечательному человеку, которым он является, и невероятному путешествию, которое его ждет впереди. С днем   рождения! 🎉❞</h4>
+    <a href="Click.me">Click me!</a>
 </body>
 </html>
