--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h4>❝On this special day, I extend heartfelt birthday wishes to your amazing father. May the tapestry of his life be woven with threads of love, laughter, and countless beautiful memories. <br>
         Here's to celebrating the remarkable person he is and the incredible journey that lies ahead. Happy Birthday! 🎉❞</h4>
     <h3>Дальше пришлось позвать GOOGLE:</h3>
-    <h4>❝В этот особенный день я сердечно поздравляю твоего замечательного отца с днем рождения. Пусть полотно его жизни будет соткано из нитей любви, смеха и бесчисленных прекрасных воспоминаний. <br>
+    <h4 id="rus">❝В этот особенный день я сердечно поздравляю твоего замечательного отца с днем рождения. Пусть полотно его жизни будет соткано из нитей любви, смеха и бесчисленных прекрасных воспоминаний. <br>
         Давайте отдадим дань уважения тому замечательному человеку, которым он является, и невероятному путешествию, которое его ждет впереди. С днем   рождения! 🎉❞</h4>
     <a href="Click.html">Click me!</a>
 </body>
