--- a/Click.html
+++ b/Click.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <IMG scr="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExd3hudzdsZ3c5cnlucDI1MW5nY2hjNmNiNHRmNXR4MXRyeWZsOGhmaSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/vXEeRBP3QeJ2w/giphy.gif">
+    <iframe src="https://giphy.com/embed/vXEeRBP3QeJ2w" width="100%" height="294" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     <h1>Добавлю парочку слов от себя.. Надеюсь, тебе понравится ваше маленькое путешествие в Сартавалу 🥺<br>
     Ещё я верю, что твои жирафы смогут расправить свои шеи, устремить головы в высь, где и найдут свой, твой, наш прекрасный мир будущего! 3_3<br>
-    Хочу сказать, что я несказанно </h1>
+    Хочу сказать, что я несказанно рад и, считаю, что мне очень повезло родиться именно у вас с мамой.. Спасиюо за счастливое детство!  </h1>
 </body>
