--- a/Click.html
+++ b/Click.html
@@ -10,5 +10,7 @@
     <iframe src="https://giphy.com/embed/vXEeRBP3QeJ2w" width=100% height="294" frameBorder="0"></iframe>
     <h2>Добавлю парочку слов от себя.. Надеюсь, тебе понравится ваше маленькое путешествие в Сартавалу 🥺<br>
     Ещё я верю, что твои жирафы смогут расправить свои шеи, устремить головы в высь, где и найдут свой, твой, наш прекрасный мир будущего! 3_3<br>
-    Хочу сказать, что я несказанно рад и, считаю, что мне очень повезло родиться именно у вас с мамой.. Спасибо за счастливое детство!  </h2>
+    Хочу сказать, что я несказанно рад и, считаю, что мне очень повезло родиться именно у вас с мамой.. Спасибо за счастливое детство!<br>
+    Хоть оно и не совсем подходит по контексту, я хочу посвятить тебе моё, пока что, любимое слово на румынском: </h2>
+    <h1>fermecător</h1>
 </body>
