--- a/Click.html
+++ b/Click.html
@@ -13,4 +13,5 @@
     Хочу сказать, что я несказанно рад и, считаю, что мне очень повезло родиться именно у вас с мамой.. Спасибо за счастливое детство!<br>
     Хоть оно и не совсем подходит по контексту, я хочу посвятить тебе моё, пока что, любимое слово на румынском: </h2>
     <h1>fermecător</h1>
+    <a href="index.html">Главная</a>
 </body>
